added normalize file

--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Gallery</title>
+    <title>Week-10_Gallery</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title"> Cats </h1>
-        <div class="slider">
-            <div class="slider-line">
-                <img src="img/ginger-cat.svg" alt="cat">
-                <img src="img/sleeping-cat.svg" alt="cat">
-                <img src="img/black-cat.svg" alt="cat">
+    <header></header>
+    <main>
+        <div class="container">
+            <h1 class="title"> Cats </h1>
+            <div class="slider">
+                <div class="slider-line">
+                    <img src="img/ginger-cat.svg" alt="cat">
+                    <img src="img/sleeping-cat.svg" alt="cat">
+                    <img src="img/black-cat.svg" alt="cat">
+                </div>
             </div>
+            <div class="buttons">
+            <button class="slider-prev">Previous</button>
+            <button class="slider-next">Next</button></div>
         </div>
-        <div class="buttons">
-        <button class="slider-prev">Previous</button>
-        <button class="slider-next">Next</button></div>
-    </div>
+    </main>
+    <footer></footer>
     <script src="index.js"></script>
 </body>
 </html>
